--- a/views/details.hbs
+++ b/views/details.hbs
@@ -5,9 +5,7 @@
     <div class="row">
 
         <div class="col-md-8">
-            <img class="img-fluid"
-                src="{{course.imageUrl}}"
-                alt="{{course.title}}" />
+            <img class="img-fluid" src="{{course.imageUrl}}" alt="{{course.title}}" />
         </div>
 
         <div class="col-md-4 text-center">
@@ -20,11 +18,11 @@
             <a class="btn btn-danger" href="/course/{{course._id}}/delete">Delete</a>
             <a class="btn btn-warning" href="/course/{{course._id}}/edit">Edit</a>
             {{else}}
-                {{#if course.enrolled}}
-                 <span class="enrolled-span">You are already enrolled</span>
-                {{else}}
-                <a class="btn btn-primary" href="/course/{{course._id}}/enroll">Enroll</a>
-                {{/if}}
+            {{#if course.enrolled}}
+            <span class="enrolled-span">You are already enrolled</span>
+            {{else}}
+            <a class="btn btn-primary" href="/course/{{course._id}}/enroll">Enroll</a>
+            {{/if}}
             {{/if}}
 
         </div>
